# nonebot_plugin_soup

./: pyproject.toml
nonebot_plugin_soup/: __init__.py  config.py
